--- a/weektwo/e1.html
+++ b/weektwo/e1.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Thomas John Watson </title></head>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="description" content="It is about Thomas J. Watson Sr."/>
+        <meta name="keywords"  content="Biography,Thomas J. Watson Sr, "/>
+
+        <meta http-equiv="X-UA-compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, intial-scale=1.0"/>
+        <meta name="robots" content="noarchive"/>
+        <title>Thomas John Watson </title></head>
     <body>
        <h1>Thomas John Watson</h1> 
        <p>Thomas John Watson Sr. (February 17, 1874 – June 19, 1956) was an American businessman who served as the chairman and CEO of IBM.
