--- a/weektwo/exercise2.html
+++ b/weektwo/exercise2.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Saurav Pratap Rana </title>
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="description" content="It is about Thomas J. Watson Sr."/>
+        <meta name="keywords"  content="Biography,Thomas J. Watson Sr, "/>
+
+        <meta http-equiv="X-UA-compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, intial-scale=1.0"/>
+        <meta name="robots" content="noarchive"/>
+        <title>Saurav Pratap Rana </title>
     <header>
         <nav>
             <ul>
@@ -13,7 +21,7 @@
     </header></head>
     <body>
        <h1 id="about">Saurav Pratap Rana </h1> 
-         <img src="https://scontent.fktm9-2.fna.fbcdn.net/v/t39.30808-6/292367798_563239575427461_188619452528578987_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=19026a&_nc_ohc=HomCNcEcDRwAX_fe4sv&tn=MR92gbt7jROQW85v&_nc_ht=scontent.fktm9-2.fna&oh=00_AfCgowMK5bCfckst_1kAg8Sj1HvvVOm7JcUWoPv22_iHuA&oe=63826AE7"alt="Saurav" height="500">
+         <img src="https://scontent.fktm3-1.fna.fbcdn.net/v/t39.30808-6/293387831_562134045538014_8209502799071900941_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=kwTGxcW6qhUAX9YclWs&_nc_ht=scontent.fktm3-1.fna&oh=00_AfDUsKebs4LC_VDMqL6TC5dNKnkCQaGkK4Q5cAFVUDNYoQ&oe=639006A0"alt="Saurav" height="500">
          <p>Hello, I am Saurav Pratap Rana son of Mr. Hari Pratap Rana and Mrs. Goma Rana, I am a permanent resident of Budhanilkantha, Kathmandu.
              I received a 3.60 GPA in SEE from Himalayan Boarding School, I attended Reliance College for my higher education .
               I graduated from Reliance College with 3.68 GPA. Furthermore, Iam currently studying at Herald College for my degree.</p>
@@ -30,6 +38,24 @@
                 <td>Herald College</td>
             </tr>
               </table>
+              <blockquote cite="https://himalaya.school/">
+
+              <dl>
+                <dt> Himalaya Boarding High School</dt>
+                <dd>
+                    Himalaya Boarding High school is a promising institute which was founded by an enthusiastic, dynamic,
+                     dedicated and well experienced group of academics and professionals in the year 2062 B.S. 
+                     with the cherished goal of producing competent, dynamic and skilled manpower for any kinds of
+                      managerial/ financial field who devotes themselves for contributing in the all-round development of the nation.
+                </dd>
+                
+              </dl></blockquote>
+              <div class="college">
+                <h2> Reliance College</h2>
+                <p>Reliance International Academy offers regular tutorials to meet the objectives of given set of curriculum within prescribed credit hours. The competent faculties of the college make students certain to achieve desired theoretical and practical understanding of the content and skills to bear forth the challenges of examinations.
+
+                </p>
+              </div>
             <h3 id="Hobbies">Hobbies</h3>
               <ol>
                 <li>Gaming</li>
